--- a/modules/ROOT/pages/setup.adoc
+++ b/modules/ROOT/pages/setup.adoc
@@ -1,5 +1,6 @@
 == Setup the Development Environment
 
-=== Prepare the Software
+=== Requirements
 
-==== Target Platform
+- Ubuntu 24.04 LTS (newer versions may work, but are untested)
+- At least 100 GB of free disk space
