--- a/modules/ROOT/pages/rpu-setup.adoc
+++ b/modules/ROOT/pages/rpu-setup.adoc
@@ -1,93 +1,70 @@
 == Setup the Development Environment
 
-NOTE: This section is mostly the same as Zephyr official
-documentation. If you are already familiar with Zephyr development
-environment, you can safely skip this section.
+include::link-attributes.adoc[]
+
+NOTE: This section is mostly the same as the "{zephyr-gsg}[Getting Started Guide]"
+from the Zephyr official documentation. If you are already familiar
+with Zephyr development environment, you can safely skip this section.
 
 
-=== Prepare the Software
-
-==== Install Required Dependencies
-
-===== Update your system
+=== Install Required Dependencies
 
 [source,  bash]
 ----
 $ sudo apt update && sudo apt upgrade
-----
-
-===== Install dependencies
-
-[source,  bash]
-----
 $ sudo apt install --no-install-recommends git cmake ninja-build gperf \
     ccache dfu-util device-tree-compiler wget \
-    python3-dev python3-pip python3-setuptools python3-tk python3-wheel xz-utils file \
+    python3-dev python3-venv python3-pip python3-setuptools python3-tk \
+    python3-wheel xz-utils file \
     make gcc gcc-multilib g++-multilib libsdl2-dev libmagic1
 ----
 
-==== Get Zephyr and Python Requirements
+=== Setup a Workspace
 
-===== Create your working directory
+Create your working directory and a new virtual environment.
 
 [source, bash]
 ----
 $ mkdir -p ~/myproject && cd ~/myproject
+$ python3 -m venv .venv
+$ source .venv/bin/activate
 ----
 
-===== Install the Python venv package
+=== Install the West
 
-[source, bash]
-----
-$ sudo apt install python3-venv
-----
-
-===== Create a new virtual environment
-
-[source, bash]
-----
-$ python3 -m venv ~/myproject/.venv
-----
-
-===== Activate the virtual environment
-
-[source, bash]
-----
-$ source ~/myproject/.venv/bin/activate
-----
-
-===== Install the west
+Once venv is activated, we can install West locally.
 
 [source, bash]
 ----
 $ pip install west
 ----
 
-===== Clone the SC-OBC Module V1 sample repository using west
+=== Clone Zephyr Repository
+
+From here, we can use `west` to do most of the works.
 
 [source, bash]
 ----
-$ cd ~/myproject
-$ west init -m https://github.com/spacecubics/scobc-v1-sample
+$ west init -m https://github.com/zephyrproject-rtos/zephyr
 $ west update
 $ west zephyr-export
 ----
 
-===== Install the Python requirements
+=== Install the Python Requirements
 
 [source, bash]
 ----
 $ west packages pip --install
 ----
 
-==== Install the Zephyr SDK
+=== Install the Zephyr SDK
 
 [source, bash]
 ----
 $ west sdk install
 ----
 
-==== Install udev rules
+=== Install Udev Rules
 
 Install the udev rules, which allow you to flash most Zephyr boards as a regular user.
 
@@ -98,7 +75,7 @@ sudo cp ~/zephyr-sdk-[VERSION]/sysroots/x86_64-pokysdk-linux/usr/share/openocd/c
 sudo udevadm control --reload
 ----
 
-==== Install the OpenOCD related package
+=== Install the OpenOCD related package
 
 Install the packages required for flashing via *OpenOCD*.
 
@@ -107,9 +84,10 @@ Install the packages required for flashing via *OpenOCD*.
 sudo apt install libftdi1 libgpiod2 libhidapi-hidraw0 libcapstone4
 ----
 
-==== Install the tio package
+=== Install the tio Package
 
-Although there are several tools available for working with a serial console, this document uses *tio*.
+Although there are several tools available for working with a serial
+console, this document uses {tio-github}[`tio`, a serial device I/O tool].
 
 [source, bash]
 ----
