--- a/modules/ROOT/pages/apu.adoc
+++ b/modules/ROOT/pages/apu.adoc
@@ -190,6 +190,8 @@ PetaLinux 2025.1+snapshot-90da27262fec73f66af71115afc7fa654e974815 scobc-v1 ttyA
 scobc-v1 login:
 ----
 
+The default username is `petalinux`, and you need to set the password on the first login.
+
 === Try peripherals
 
 ==== Build the dev image
@@ -216,27 +218,112 @@ build/tmp/deploy/images/scobc-v1/sc-image-dev-scobc-v1-yyyyMMddHHmmss.wic
 build/tmp/deploy/images/scobc-v1/sc-image-dev-scobc-v1.wic@
 ----
 
+==== Ethernet
+
+----
+# ip addr flush dev end0
+# ip addr add 10.30.0.123/24 dev end0
+# ip route add default via 10.30.0.1 dev end0
+# ip link set dev end0 up
+----
+
+==== USB
+
+----
+# mount /dev/sda1 /mnt
+----
+
 ==== GPIO
 
 In `sc-image-dev`, you can use the `gpiod` tools to control GPIOs.
 
-===== Set GPIO(PMC_MIO12)
+===== Set GPIO(`PMC_MIO12`)
 
 ----
-$ gpiowrite -c 1 12=1
+# gpiowrite -c 1 12=1
 ----
 
-===== Clear GPIO(PMC_MIO12)
+===== Clear GPIO(`PMC_MIO12`)
 
 ----
-$ gpiowrite -c 1 12=0
+# gpiowrite -c 1 12=0
 ----
 
-===== Read GPIO(PMC_MIO12)
+===== Read GPIO(`PMC_MIO12`)
 
 ----
-$ gpioread -c 1 12
+# gpioread -c 1 12
 active
 ----
 
 It also has `libgpiod` python3 bindings.
+
+==== eMMC
+
+----
+# ls /dev/mmcblk1
+/dev/mmcblk1
+----
+
+==== microSD card
+
+----
+# ls /dev/mmcblk0
+/dev/mmcblk0
+----
+
+==== SPI NOR Flash
+
+----
+# ls /dev/mtd0
+/dev/mtd0
+----
+
+===== Write and read data
+
+----
+# echo "SPI NOR Flash 1" > /dev/mtd0
+# hexdump -C /dev/mtd0
+----
+
+===== Erase all sectors
+
+----
+# flash_erase /dev/mtd0 0 0
+----
+
+===== Switch banks
+
+----
+# gpioset -c 1 50=0
+# echo "SPI NOR Flash 1" > /dev/mtd0
+# hexdump -C /dev/mtd0
+00000000  53 50 49 20 4e 4f 52 20  46 6c 61 73 68 20 31 0a  |spi nor flash 1.|
+00000010  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
+*
+# gpioset -c 1 50=1
+# hexdump -C /dev/mtd0
+00000000  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
+00000010  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
+*
+# echo "SPI NOR Flash 2" > /dev/mtd0
+# hexdump -C /dev/mtd0
+00000000  53 50 49 20 4e 4f 52 20  46 6c 61 73 68 20 32 0a  |spi nor flash 2.|
+00000010  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
+*
+# gpioset -c 1 50=0
+# hexdump -C /dev/mtd0
+00000000  53 50 49 20 4e 4f 52 20  46 6c 61 73 68 20 31 0a  |spi nor flash 1.|
+00000010  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
+*
+----
+
+==== RTC
+
+----
+# hwclock -s
+# cat /sys/class/rtc/rtc0/date
+2025-11-17
+# cat /sys/class/rtc/rtc0/time
+12:34:56
+----
