apu: Correct log of hexdump in SPI NOR Flash
"spi nor flash 1." is incorrect.

Signed-off-by: Takumi Ando <takumi@spacecubics.com>

--- a/modules/ROOT/pages/apu.adoc
+++ b/modules/ROOT/pages/apu.adoc
@@ -298,7 +298,7 @@ It also has `libgpiod` python3 bindings.
 # gpioset -c 1 50=0
 # echo "SPI NOR Flash 1" > /dev/mtd0
 # hexdump -C /dev/mtd0
-00000000  53 50 49 20 4e 4f 52 20  46 6c 61 73 68 20 31 0a  |spi nor flash 1.|
+00000000  53 50 49 20 4e 4f 52 20  46 6c 61 73 68 20 31 0a  |SPI NOR Flash 1.|
 00000010  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
 *
 # gpioset -c 1 50=1
@@ -308,12 +308,12 @@ It also has `libgpiod` python3 bindings.
 *
 # echo "SPI NOR Flash 2" > /dev/mtd0
 # hexdump -C /dev/mtd0
-00000000  53 50 49 20 4e 4f 52 20  46 6c 61 73 68 20 32 0a  |spi nor flash 2.|
+00000000  53 50 49 20 4e 4f 52 20  46 6c 61 73 68 20 32 0a  |SPI NOR Flash 2.|
 00000010  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
 *
 # gpioset -c 1 50=0
 # hexdump -C /dev/mtd0
-00000000  53 50 49 20 4e 4f 52 20  46 6c 61 73 68 20 31 0a  |spi nor flash 1.|
+00000000  53 50 49 20 4e 4f 52 20  46 6c 61 73 68 20 31 0a  |SPI NOR Flash 1.|
 00000010  ff ff ff ff ff ff ff ff  ff ff ff ff ff ff ff ff  |................|
 *
 ----
