--- a/modules/ROOT/pages/apu-build-yocto.adoc
+++ b/modules/ROOT/pages/apu-build-yocto.adoc
@@ -5,7 +5,7 @@
 [source,  bash]
 ----
 $ sudo apt update
-$ sudo apt install git python3 uv
+$ sudo apt install git git-lfs python3 uv
 ----
 
 ==== Clone the Repository
@@ -15,6 +15,9 @@ $ sudo apt install git python3 uv
 $ git clone https://github.com/spacecubics/meta-scobc
 $ cd meta-scobc
 ----
+
+NOTE: `meta-scobc` uses {git-lfs}[Git Large File Storage (Git
+LFS)]. Make sure you install it.
 
 ==== Install and enable the required Python packages
 
