--- a/modules/ROOT/pages/link-attributes.adoc
+++ b/modules/ROOT/pages/link-attributes.adoc
@@ -1,2 +1,3 @@
-:zephyr-gsg: https://docs.zephyrproject.org/latest/develop/getting_started/index.html
+:git-lfs: https://git-lfs.com/
 :tio-github: https://github.com/tio/tio
+:zephyr-gsg: https://docs.zephyrproject.org/latest/develop/getting_started/index.html
