apu-peripherals: Add more descriptions for using SPI NOR Flash
Let user know how to switch banks of SPI NOR Flash.

Signed-off-by: Takumi Ando <takumi@spacecubics.com>

--- a/modules/ROOT/pages/apu-peripherals.adoc
+++ b/modules/ROOT/pages/apu-peripherals.adoc
@@ -170,6 +170,9 @@ more info.
 
 ===== Switch banks
 
+SC-OBC Module V1 has two SPI NOR Flash banks.
+You can switch between them by controlling `QSPI_MEM_SEL`(`PMC_MIO50`) pin.
+
 ----
 # gpioset -c 1 50=0
 # echo "SPI NOR Flash 1" > /dev/mtd0
